--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=api
+spring.datasource.url=jdbc:mysql://localhost/challengue_4
+spring.datasource.username=root
+spring.datasource.password=system
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+
+#Server configurations
+server.error.include-stacktrace=never
+
+api.security.secret=123456
